--- a/ap_sourcing_ext/views/qweb_view.xml
+++ b/ap_sourcing_ext/views/qweb_view.xml
@@ -106,7 +106,11 @@
                 <div class="col-xs-2" t-if="o.origin">
                     <strong>Quotation Reference:</strong>
                     <p t-field="o.origin"/>
-                </div>          
+                </div>
+                <div class="col-xs-2" t-if="o.fal_incoterm.name">
+                    <strong>Incoterm:</strong>
+                    <p t-field="o.fal_incoterm.name"/>
+                </div> 
             </xpath>
             <xpath expr="//div[@class='row mt32 mb32']/div[@t-if='o.reference']" position="replace">
                 <div class="col-xs-2" t-if="o.user_id.name">
