--- a/ap_sourcing_ext/views/qweb_view.xml
+++ b/ap_sourcing_ext/views/qweb_view.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-
+        
         <!-- modify headers -->
         <template id="external_layout_header_apsourcing_ext" inherit_id="report.external_layout_header">
             <!-- add margin to logo -->
             <xpath expr="//div[@class='header']/div[@class='row']/div[@class='col-xs-3']/img[@t-if='company.logo']" position="attributes">
                 <attribute name="style">max-height: 45px;margin-bottom:5px;</attribute>
             </xpath> 
-            <xpath expr="//div[@class='header']/div[@class='row']/div[@class='col-xs-3']/div[@t-field='company.partner_id']" position="inside">
-                <div t-if="company.company_registry"><span t-field="company.company_registry"/></div>
+            <xpath expr="//div[@class='header']/div[@class='row']/div[@class='col-xs-3']/div[@t-field='company.partner_id']" position="replace">
+                <div style="border-bottom: 1px solid black;">
+                    <div t-if="company.name" t-field="company.name"/>
+                    <div t-if="company.street" t-field="company.street" />
+                    <div t-if="company.street2" t-field="company.street2" />
+                    <div>
+                        <span t-if="company.city" t-field="company.city"/>
+                        <span t-if="company.zip" t-field="company.zip"/>
+                    </div>
+                    <div t-if="company.company_registry" t-field="company.company_registry" />
+                </div>
             </xpath> 
         </template>
             
@@ -18,13 +27,13 @@
             <xpath expr="//div[@class='page']/div[@class='row'][1]" position="replace">
                 <div class="row">
                     <div class="col-xs-6">
-                        <strong>Invoice address:</strong>
+                        <strong>Invoice Address:</strong>
                         <div t-field="o.partner_invoice_id" 
                             t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
                         <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p>                       
                     </div>
                     <div class="col-xs-5 col-xs-offset-1" t-if="o.fal_delivery_address">
-                        <strong>Delivery address:</strong>
+                        <strong>Delivery Address:</strong>
                         <div t-field="o.fal_delivery_address"
                             />
                     </div>
@@ -97,7 +106,7 @@
                         <span t-field="o.partner_id.vat"/>
                     </div>
                     <div class="col-xs-5 col-xs-offset-1" t-if="o.fal_delivery_address">
-                        <strong>Delivery address:</strong>
+                        <strong>Delivery Address:</strong>
                         <div t-field="o.fal_delivery_address"
                             />
                     </div>
