--- a/hps_field_ext/views/report_invoice.xml
+++ b/hps_field_ext/views/report_invoice.xml
@@ -113,10 +113,10 @@
                                 <span t-field="l.uos_id" groups="product.group_uom"/>
                             </td>
                             <td class="text-right">
-                                <span t-field="l.unit_price_after_discount"/>
+                                <span t-field="l.fapiao_unit_price_vat"/>
                             </td>
                             <td class="text-right" groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
-                            <td class="text-right"><span t-field="l.price_subtotal_vat" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/></td>
+                            <td class="text-right"><span t-field="l.fapiao_subtotal_vat" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/></td>
                         </t>
                     </tr>
                 </tbody>
