--- a/purchase/views/report_purchaseorder.xml
+++ b/purchase/views/report_purchaseorder.xml
@@ -78,8 +78,8 @@
                             <span t-field="line.price_unit"/>
                         </td>
                         <td class="text-right">
-                            <span t-field="line.discount"
-                                />
+                            <span t-field="line.price_subtotal"
+                                t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                         </td>
                     </tr>
                 </tbody>
