--- a/hps_field_ext/views/report_purchaseorder.xml
+++ b/hps_field_ext/views/report_purchaseorder.xml
@@ -17,6 +17,13 @@
             <attribute name="t-field-options">{"widget": "date"}</attribute>
         </xpath>
  
+        <xpath expr="//div[@class='page']/div[@class='row mt32 mb32']/div[@t-if='o.date_order'] position="after">
+            <div t-if="o.payment_term_id" class="col-xs-3">
+                <strong>Payment Term:</strong>
+                <p t-field="o.payment_term_id.name"/>
+            </div>
+        </xpath>
+ 
         <xpath expr="//div[@class='page']/table[@class='table table-condensed']" position="replace">
             <table class="table table-condensed">
                 <thead>
